don't create multiple dialogs in the loop, fdo#59314

Change-Id: Ia48262cdf8b07caf6622f2d4a48f366f3f26c0fd